# pecsbrada

./: README.md  pyproject.toml
.github/workflows/: build-deb.yml  build-rpm.yml
.tx/: config
data/: arasaac_en2sv.json  arasaac_sv.json  pecsbrada.desktop
locale/sv/LC_MESSAGES/: pecsbrada.mo
po/: pecsbrada.pot  sv.mo  sv.po
po/locale/sv/LC_MESSAGES/: pecsbrada.mo
src/pecsbrada/: __main__.py  arasaac.py  export.py  main.py  tts.py  window.py
src/pecsbrada/data/: arasaac_en2sv.json  arasaac_sv.json
src/pecsbrada/locale/sv/LC_MESSAGES/: pecsbrada.mo
