[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pecsbrada"
version = "0.3.1"
description = "Digital PECS communication board with text-to-speech"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
authors = [
    {name = "Daniel Nylander"}
]

[project.scripts]
pecsbrada = "pecsbrada.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["data/*.json"]
